--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/trendyol
 spring.datasource.username=beyza
 spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
